# email_parser_rust

./: .env  Cargo.toml  rules.json
email_connect/: Cargo.toml
email_connect/src/: lib.rs
src/: logger.rs  main.rs  settings.rs
src/processors/: reader.rs
