[package]
name = "email_server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
email_connect = { path = "./email_connect" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.44", features = ["formatting", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "local-time"] }

